# mcp-server-if

./: .gitmodules  .mcp.json  CLAUDE.md  README.md  hatch_build.py  pyproject.toml
.github/workflows/: build.yml  ci.yml  publish.yml
scripts/: build-glulxe.sh
src/mcp_server_if/: __init__.py  config.py  server.py  session.py
tests/: conftest.py  test_config.py  test_integration.py  test_server.py  test_session.py
