[project]
name = "mcp-server-if"
version = "0.1.0"
description = "MCP server for playing Glulx interactive fiction games"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "David A Roberts", email = "d@vidr.cc" }
]
keywords = ["mcp", "interactive-fiction", "glulx", "text-adventure", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Role-Playing",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
mcp-server-if = "mcp_server_if:main"

[project.urls]
Homepage = "https://github.com/davidar/mcp-server-if"
Repository = "https://github.com/davidar/mcp-server-if"
Issues = "https://github.com/davidar/mcp-server-if/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_if"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "deps/",
    "hatch_build.py",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pyright>=1.1",
    "ruff>=0.8",
]
